backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: northamerica-northeast2-docker.pkg.dev/blog-421520/my-repository/backend-image:v9
        ports:
        - containerPort: 4000
