frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2  # Number of replicas
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: northamerica-northeast2-docker.pkg.dev/blog-421520/my-repository/frontend-image:v9
        ports:
        - containerPort: 80
