ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "piranaminullah"  # Replace with your reserved static IP name
    networking.gke.io/managed-certificates: "mcrt-bc56d3d1-7d9e-4942-b078-0196e492a8bc"  # This should match the name of the ManagedCertificate
spec:
  rules:
  - host: "piranaminullah.space"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port:
              number: 80
